--- a/IAB 개론 및 실습/220902 HW1.ipynb
+++ b/IAB 개론 및 실습/220902 HW1.ipynb
@@ -99,8 +99,8 @@
         "id": "cXSdPJqu4Pbt"
       },
       "source": [
-        "Students_list = ['Parish', 'Stamps', 'Henry', 'Kim', 'Choi', 'Park', 'Delao', 'Taylor']\n",
-        "Students = np.array([[92,42,77,62],\n",
+        "students_list = ['Parish', 'Stamps', 'Henry', 'Kim', 'Choi', 'Park', 'Delao', 'Taylor']\n",
+        "students = np.array([[92,42,77,62],\n",
         "                     [43,57,59,78],\n",
         "                     [46,74,100,48],\n",
         "                     [59,47,65,41],\n",
@@ -133,8 +133,8 @@
         "id": "euC-5YQ54Pby"
       },
       "source": [
-        "Departments_list = ['A', 'B', 'C', 'D']\n",
-        "Departments =  np.array([[0.50,0.10,0.30,0.10],\n",
+        "departments_list = ['A', 'B', 'C', 'D']\n",
+        "departments =  np.array([[0.50,0.10,0.30,0.10],\n",
         "                         [0.05,0.55,0.20,0.20],\n",
         "                         [0.10,0.10,0.70,0.10],\n",
         "                         [0.15,0.18,0.22,0.45]])"
@@ -196,7 +196,7 @@
         "outputId": "837267fd-08f6-45b5-9f01-079855449a34"
       },
       "source": [
-        "result = solution_1(Students_list, Students, Departments_list, Departments)\n",
+        "result = solution_1(students_list, students, departments_list, departments)\n",
         "print(result)\n",
         "\n",
         "answer = {'Park': 'A', 'Choi': 'D', 'Kim': 'C', 'Delao': 'C', 'Parish': 'A', 'Taylor': 'C', 'Henry': 'C', 'Stamps': 'D'}\n",
@@ -277,7 +277,7 @@
         "outputId": "0f784f45-a5ad-45bd-aa18-13ca15c85e3e"
       },
       "source": [
-        "result = solution_2(Students_list, Students, Departments_list, Departments)\n",
+        "result = solution_2(students_list, students, departments_list, departments)\n",
         "print(result)\n",
         "\n",
         "answer = {'Park': 'C', 'Henry': 'B', 'Parish': 'A', 'Choi': 'D', 'Stamps': 'D', 'Delao': 'A', 'Kim': 'C', 'Taylor': 'B'}\n",
